# jax-capr

./: .gitignore  .gitmodules  README.md  codex.md  pyproject.toml
_docs/: multiloop-unpaired-zero.md
_docs/deleted/: 2025-10-30-outside-overview.md  2025-11-04-outside-clarifications.md  2025-11-05-outside-refactor-plan.md  simple_outside.py  vectorized_outside.py
_docs/features/: 2025-11-04-bpp-outside-stage1.md  2025-11-05-psum_outer_internal_loops.md
_docs/thinking/: 2025-10-30-outside-overview.md  2025-11-04-initial-survey.md  2025-11-04-outside-clarifications.md  (+4 more)
notes/: debugging.1107.md  debugging.1112.md  dp_mapping_turner1999.md  openai_gpt5pro.jax-rnafold_report.md  outside_algorithm_turner.md  status_2025-10-21.md
pseudocodes/: gpt5pro_memo.txt  outside_1105.md  outside_1112.md  simple_outside.py  simple_outside.txt  simple_outside_scaled.py  vectorized_outside.py  vectorized_outside.txt  vectorized_outside_scaled.py
scripts/: compare_bpp.py
tests/: bar_M1_GGCGGAAAGCGAAACGCAAAACGGCAAAAGCCGAAACCGCC.csv  bar_P_GGCGGAAAGCGAAACGCAAAACGGCAAAAGCCGAAACCGCC.csv  bar_Pm1_GGCGGAAAGCGAAACGCAAAACGGCAAAAGCCGAAACCGCC.csv  bpp_AAUUUUCCCAGCAGUCCCCACUAUAGCUACCCAUACGGUACCAGGGGCAAACGUGAAAUUGCCCCAGCGGGAGUAC.csv  bpp_AAUUUUCCCAGCAGUCCCCACUAUAGCUACCCAUACGGUACCAGGGGCAAACGUGAAAUUGCCCCGCGGGAGUAC.csv  bpp_GGCGGAAAGCGAAACGCAAAACGGCAAAAGCCGAAACCGCC.csv  test_outside_vs_vienna.py  viennabpp_AAUUUUCCCAGCAGUCCCCACUAUAGCUACCCAUACGGUACCAGGGGCAAACGUGAAAUUGCCCCAGCGGGAGUAC.csv  viennabpp_AAUUUUCCCAGCAGUCCCCACUAUAGCUACCCAUACGGUACCAGGGGCAAACGUGAAAUUGCCCCGCGGGAGUAC.csv
(+4 files in other folders)
